Replace `Collectors.toList()` with `toList()` for improved code clarity and conciseness.